Adapt ini file to W2RP publication experiment

--- a/simulations/publications/W2RP/W2RP.ini
+++ b/simulations/publications/W2RP/W2RP.ini
@@ -3,7 +3,7 @@
 description = Two hosts communicating wirelessly
 network = simulations.networks.singleLink
 seed-0-mt=732195
-sim-time-limit = 3.9999s
+sim-time-limit = 299.9999s
 #sim-time-limit = 2s
 **.startTime = 0s     
 
@@ -32,16 +32,17 @@ singleLink.camera.rtps.writer[0].typename = "WriterW2RP"
 singleLink.**.rtps.writer[*].numberReaders = 1 
 singleLink.camera.rtps.writer[0].numberReaders = 1
 singleLink.camera.rtps.writer[0].fragmentSize = 800
-singleLink.camera.rtps.writer[0].shaping = 1000us
+singleLink.camera.rtps.writer[0].shaping = ${sh=1400us}
 singleLink.camera.rtps.writer[0].deadline = 100ms
 singleLink.camera.rtps.writer[0].enableSeparateHBs = false
 singleLink.camera.rtps.writer[0].enableNackSuppression = true
-singleLink.camera.rtps.writer[0].nackSuppressionDuration = ${2000us + 500us}
 singleLink.camera.rtps.writer[0].timeout = 3500us
+singleLink.camera.rtps.writer[0].nackSuppressionDuration = ${2*$sh + $rd}
+
 # Reader configuration
 singleLink.vehicle.rtps.reader[0].typename = "Reader"
 singleLink.vehicle.rtps.reader[0].deadline = 100ms
-singleLink.vehicle.rtps.reader[0].readerResponseDelay = 1000us
+singleLink.vehicle.rtps.reader[0].readerResponseDelay = ${rd = 500us}
 # TODO configure answer delay if configured
 
 
@@ -84,7 +85,7 @@ singleLink.**.wlan[0].mac.typename = "CsmaCaMacModified"
 singleLink.**.wlan[0].queue.typename = "DropTailQueue"
 
 singleLink.**.wlan[0].queue.packetCapacity = 100
-singleLink.**.wlan[0].mac.bitErrorRate = ${0,0.0000157159,0.00003328458,0.000035,0.0000423156, 0.0000532019,0.0000761942,0.0001033877,0.0001366689,0.000179574,0.000240042,0.0003434054} # 690
+singleLink.**.wlan[0].mac.bitErrorRate = ${0,0.00001389,0.0000294225,0.000047029,0.00006735, 0.000091392,0.0001208,0.00015874,0.00021219,0.00030356}
 
 # MAC retreansmissions
 *.**.wlan[0].mac.useAck = false
@@ -92,10 +93,10 @@ singleLink.**.wlan[0].mac.bitErrorRate = ${0,0.0000157159,0.00003328458,0.000035
 
 # CSMA/CA configuration
 
-singleLink.**.wlan[0].mac.sifsTime = 14us
+singleLink.**.wlan[0].mac.sifsTime = 10us
 singleLink.**.wlan[0].mac.slotTime = 9us
 
-singleLink.**.wlan[0].mac.ta = ${11,33,56,78,100,122,145,167,189,211,233,256,278,300,322,345,366,389,411,433}
+singleLink.**.wlan[0].mac.ta = ${16,38,60,83,104,127,149,172,194,216,238,260,282,305,327,349,372}
 singleLink.**.wlan[0].mac.ta_enable = true
 #*.**.wlan[0].mac.cwMin = 82
 #*.**.wlan[0].mac.cwMax = 82
