updated RTAS publication experiments

--- a/simulations/publications/RTAS2023/PrioritizationDependentSignalPaths/WiMEPMultiLinkLatenciesNoPrio.ini
+++ b/simulations/publications/RTAS2023/PrioritizationDependentSignalPaths/WiMEPMultiLinkLatenciesNoPrio.ini
@@ -2,20 +2,20 @@
 [General]
 description = Two hosts communicating wirelessly
 network = simulations.networks.multiLink
-seed-0-mt=532795
-sim-time-limit = 9.999999s
+seed-0-mt=732195122
+sim-time-limit = 49.999999s
 **.startTime = 0s     
 
 # =================================================
 # ============= Application layer =================
 # =================================================
 
-multiLink.numberReceivingNodes = ${n=3}
+multiLink.numberReceivingNodes = ${n=5}
 
 multiLink.sender.numberWriterApps = 1
 multiLink.receivers*.numberReaderApps = 1
 
-multiLink.sender.rtpsAppWriter[*].sampleSize = 412344B
+multiLink.sender.rtpsAppWriter[*].sampleSize = 641424B
 multiLink.sender.rtpsAppWriter[*].samplePeriod = 100ms
 multiLink.sender.rtpsAppWriter[*].jitter = 0ms 
 multiLink.sender.rtpsAppWriter[*].offset = 0ms
@@ -26,7 +26,7 @@ multiLink.sender.rtpsAppWriter[*].offset = 0ms
 
 # RTPS module
 multiLink.**.rtps.nbrApps = 1
-multiLink.**.rtps.nbrReadersPerApp = ${3}
+multiLink.**.rtps.nbrReadersPerApp = ${5}
 
 # Writer configuration  
 multiLink.sender.rtps.writer[0].typename = "WriterWiMEP"
@@ -34,21 +34,14 @@ multiLink.sender.rtps.writer[0].numberReaders = ${n}
 multiLink.sender.rtps.writer[0].fragmentSize = 11454
 multiLink.sender.rtps.writer[0].shaping = ${sh=1000us}
 multiLink.sender.rtps.writer[0].deadline = 100ms
-multiLink.sender.rtps.writer[0].timeout = ${4*$sh - 1us}
-multiLink.sender.rtps.writer[0].prioritized = true
-multiLink.sender.rtps.writer[0].prioMode = "ADAPTIVE_LOW_PDR"
-
+multiLink.sender.rtps.writer[0].timeout = ${2*$sh - 1us}
 multiLink.sender.rtps.writer[0].enableNackSuppression = true
-multiLink.sender.rtps.writer[0].nackSuppressionDuration = ${2*$sh + 5us}
+multiLink.sender.rtps.writer[0].nackSuppressionDuration = ${2*$sh +5us}
+multiLink.sender.rtps.writer[0].prioritized = false
 
 # Reader configuration
 multiLink.receivers[*].rtps.reader[0].typename = "ReaderWiMEP"
 multiLink.receivers[*].rtps.reader[0].deadline = 100ms
-# TODO configure answer delay if configured
-
-multiLink.receivers[0].rtps.reader[0].priority = 1
-multiLink.receivers[1].rtps.reader[0].priority = 2
-multiLink.receivers[2].rtps.reader[0].priority = 3
 
 
 # =================================================
@@ -86,8 +79,13 @@ multiLink.**.wlan[0].mac.typename = "CsmaCaMacModified"
 multiLink.**.wlan[0].queue.typename = "DropTailQueue"
 
 multiLink.**.wlan[0].queue.packetCapacity = 100
-multiLink.**.wlan[0].mac.bitErrorRate = ${0, 0.00000114, 0.0000024, 0.00000384, 0.0000055, 0.00000747, 0.00000987, 0.00001297, 0.00001734, 0.00002481, 1}#{0, 0.00000055, 0.00000114, 0.00000175, 0.0000024, 0.0000031, 0.00000384, 0.00000464, 0.0000055, 0.00000644, 0.00000747, 0.0000086, 0.00000987, 0.00001131, 0.00001297, 0.00001494, 0.00001734, 0.00002044, 0.00002481, 0.00003228, 1}
-multiLink.**.wlan[0].mac.dependentSignalPaths = false
+multiLink.sender.wlan[0].mac.bitErrorRate = ${0.00000114}
+multiLink.receivers[0].wlan[0].mac.bitErrorRate = ${0.00000175}
+multiLink.receivers[1].wlan[0].mac.bitErrorRate = ${0.0000024}
+multiLink.receivers[2].wlan[0].mac.bitErrorRate = ${0.0000031}
+multiLink.receivers[3].wlan[0].mac.bitErrorRate = ${0.00000384}
+multiLink.receivers[4].wlan[0].mac.bitErrorRate = ${0.00000747, 0.00000987, 0.00001297, 0.00001734}
+multiLink.**.wlan[0].mac.dependentSignalPaths = true
 
 multiLink.**.wlan[0].mac.mtu = 11454+200
 
@@ -99,8 +97,10 @@ multiLink.**.wlan[0].mac.mtu = 11454+200
 multiLink.**.wlan[0].mac.sifsTime = 14us
 multiLink.**.wlan[0].mac.slotTime = 9us
 
-multiLink.**.wlan[0].mac.ta = ${ta = 11,33,55,78,100,122,145,167,189,211}
+multiLink.**.wlan[0].mac.ta = ${ta = 100}
 multiLink.**.wlan[0].mac.ta_enable = true
+#*.**.wlan[0].mac.cwMin = 82
+#*.**.wlan[0].mac.cwMax = 82
 
 # ======================================================
 # ================= Physical - Layer ===================
