bunch of small updates

--- a/simulations/PaperWirelessPipelining/testingBurstErrors/testingBurstErrors.ini
+++ b/simulations/PaperWirelessPipelining/testingBurstErrors/testingBurstErrors.ini
@@ -2,7 +2,7 @@
 [General]
 description = Two hosts communicating wirelessly
 network = simulations.networks.multiLink
-seed-0-mt=${1,2,3,4,56,7,89,1,0,12,7,027,411,51,2455,74564,7120770}# 55,213422,4589,1452,5578945,454,75,454,5741,122657,478944,255552,4412444,855,1157895,4500,}
+seed-0-mt=${712071170}# 55,213422,4589,1452,5578945,454,75,454,5741,122657,478944,255552,4412444,855,1157895,4500,1,2,3,4,56,7,89,1,0,12,7,027,411,51,2455,74564}
 sim-time-limit = 999.999s
 **.startTime = 0s     
 
@@ -33,23 +33,19 @@ multiLink.sender.rtps.writer[0].typename = "WriterWiMEP"
 multiLink.sender.rtps.writer[0].numberReaders = ${n}
 multiLink.sender.rtps.writer[0].fragmentSize = 11306
 multiLink.sender.rtps.writer[0].shaping = ${sh=1400us}
-multiLink.sender.rtps.writer[0].deadline = 100ms #${33333us, 100ms}
-multiLink.sender.rtps.writer[0].timeout = ${4*$sh - 1us}
+multiLink.sender.rtps.writer[0].deadline = ${d=33333us, 44ms, 55ms, 66ms, 77ms, 88ms, 99ms, 100ms}
+multiLink.sender.rtps.writer[0].timeout = ${2*$sh - 1us}
+multiLink.sender.rtps.writer[0].enableNackSuppression = true
+multiLink.sender.rtps.writer[0].nackSuppressionDuration = ${2*$sh + 5us}
 multiLink.sender.rtps.writer[0].prioritized = true
 multiLink.sender.rtps.writer[0].prioMode = "ADAPTIVE_LOW_PDR"
 multiLink.sender.rtps.writer[0].historySize = 10
 
-multiLink.sender.rtps.writer[0].enableNackSuppression = true
-multiLink.sender.rtps.writer[0].nackSuppressionDuration = ${2*$sh + 5us}
-
 # Reader configuration
 multiLink.receivers[*].rtps.reader[0].typename = "ReaderWiMEP"
-multiLink.receivers[*].rtps.reader[0].deadline = 100ms
+multiLink.receivers[*].rtps.reader[0].deadline = ${$d}
 # TODO configure answer delay if configured
 
-multiLink.receivers[0].rtps.reader[0].priority = 1
-multiLink.receivers[1].rtps.reader[0].priority = 2
-multiLink.receivers[2].rtps.reader[0].priority = 3
 
 
 # =================================================
@@ -102,8 +98,8 @@ multiLink.**.wlan[0].mac.mtu = 11454
 multiLink.**.wlan[0].mac.sifsTime = 14us
 multiLink.**.wlan[0].mac.slotTime = 9us
 
-multiLink.**.wlan[0].mac.ta = ${ta = 78}
 multiLink.**.wlan[0].mac.ta_enable = true
+multiLink.**.wlan[0].mac.ta = ${ta = 78}
 
 # ======================================================
 # ================= Physical - Layer ===================
