moved VNC experiments to publications directory

--- a/simulations/publications/RTAS2023/Collisions/Collisions.ini
+++ b/simulations/publications/RTAS2023/Collisions/Collisions.ini
@@ -2,7 +2,7 @@
 [General]
 description = Two hosts communicating wirelessly
 network = simulations.networks.multipleMultiLink
-seed-0-mt=532795
+seed-0-mt=552157899
 sim-time-limit = 9.999999s
 **.startTime = 0s     
 
@@ -16,7 +16,7 @@ multipleMultiLink.numberReceivingNodes = ${n=3}
 multipleMultiLink.sender[*].numberWriterApps = 1
 multipleMultiLink.receivers*.numberReaderApps = 1
 
-multipleMultiLink.sender[*].rtpsAppWriter[*].sampleSize = ${271200B}
+multipleMultiLink.sender[*].rtpsAppWriter[*].sampleSize = ${400000B}
 multipleMultiLink.sender[*].rtpsAppWriter[*].samplePeriod = 100ms
 #multipleMultiLink.sender[*].rtpsAppWriter[*].jitter = 0ms 
 #multipleMultiLink.sender[*].rtpsAppWriter[*].offset = 0ms
@@ -55,7 +55,7 @@ multipleMultiLink.**.rtps.nbrReadersPerApp = ${3}
 multipleMultiLink.sender[*].rtps.writer[0].typename = "WriterWiMEP"
 multipleMultiLink.sender[*].rtps.writer[0].numberReaders = ${n}
 multipleMultiLink.sender[*].rtps.writer[0].fragmentSize = 11200
-multipleMultiLink.sender[*].rtps.writer[0].shaping = ${sh=1200us}
+multipleMultiLink.sender[*].rtps.writer[0].shaping = ${sh=1300us}
 multipleMultiLink.sender[*].rtps.writer[0].deadline = 100ms
 multipleMultiLink.sender[*].rtps.writer[0].timeout = ${2*$sh - 1us}
 multipleMultiLink.sender[*].rtps.writer[0].enableNackSuppression = true
