--- a/simulations/examples/simpleWiMEPMultiLink/simpleWiMEPMultiLink.ini
+++ b/simulations/examples/simpleWiMEPMultiLink/simpleWiMEPMultiLink.ini
@@ -32,9 +32,12 @@ multiLink.**.rtps.nbrReadersPerApp = ${3}
 multiLink.sender.rtps.writer[0].typename = "WriterWiMEP"
 multiLink.sender.rtps.writer[0].numberReaders = ${n}
 multiLink.sender.rtps.writer[0].fragmentSize = 1000
-multiLink.sender.rtps.writer[0].shaping = 2000us
+multiLink.sender.rtps.writer[0].shaping = ${sh=2000us}
 multiLink.sender.rtps.writer[0].deadline = 100ms
 multiLink.sender.rtps.writer[0].timeout = 5000us
+
+multiLink.sender.rtps.writer[0].enableNackSuppression = true
+multiLink.sender.rtps.writer[0].nackSuppressionDuration = ${2*$sh + 5us}
 
 # Reader configuration
 multiLink.receivers[*].rtps.reader[0].typename = "ReaderWiMEP"
@@ -92,7 +95,7 @@ multiLink.**.wlan[0].mac.dependentSignalPaths = true
 multiLink.**.wlan[0].mac.sifsTime = 14us
 multiLink.**.wlan[0].mac.slotTime = 9us
 
-multiLink.**.wlan[0].mac.ta = ${0, 28, 56, 84, 111, 139, 167, 196, 222}
+multiLink.**.wlan[0].mac.ta = ${ta = 11,33,55,78,100,122,145,167,189,211}
 multiLink.**.wlan[0].mac.ta_enable = true
 #*.**.wlan[0].mac.cwMin = 82
 #*.**.wlan[0].mac.cwMax = 82
