--- a/.project
+++ b/.project
@@ -4,6 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>inet4.4</project>
+		<project>inet4.5</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
